<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/detailsContent"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="@dimen/padding_16">

		<TextView
			android:id="@+id/textView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/amountLabel"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/amount"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="19 000 ₽" />

		<TextView
			android:id="@+id/textView2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			android:text="@string/dateLabel"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView" />

		<TextView
			android:id="@+id/date"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/amount"
			tools:text="12.12.12 12:12" />

		<TextView
			android:id="@+id/textView3"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			android:text="@string/percentLabel"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView2" />

		<TextView
			android:id="@+id/percent"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/date"
			tools:text="100,500 %" />

		<TextView
			android:id="@+id/textView4"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			android:text="@string/periodLabel"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView3" />

		<TextView
			android:id="@+id/period"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/percent"
			tools:text="4 мес" />

		<TextView
			android:id="@+id/textView5"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			android:text="@string/statusLabel"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView4" />

		<TextView
			android:id="@+id/status"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/period"
			tools:text="Принята" />

		<TextView
			android:id="@+id/textView6"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			android:text="@string/firstNameLabel"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView5" />

		<TextView
			android:id="@+id/firstName"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/status"
			tools:text="Екатерина" />

		<TextView
			android:id="@+id/textView7"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			android:text="@string/lastNameLabel"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView6" />

		<TextView
			android:id="@+id/lastName"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/firstName"
			tools:text="Смирнова" />

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			android:text="@string/phoneLabel"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView7" />

		<TextView
			android:id="@+id/phone"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/padding_8"
			android:layout_weight="1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/lastName"
			tools:text="Егоровна" />
	</androidx.constraintlayout.widget.ConstraintLayout>

	<ProgressBar
		android:id="@+id/progressBar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		tools:visibility="gone" />

	<LinearLayout
		android:id="@+id/errorContent"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		android:orientation="vertical"
		android:visibility="gone">

		<TextView
			android:id="@+id/errorText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			tools:text="Произошла ошибка" />

		<Button
			android:id="@+id/errorButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/error_try_again" />
	</LinearLayout>
</FrameLayout>